# UELogParser

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
.superpowers/brainstorm/39746-1773684208/: .events  .server-stopped  approach.html
docs/: README.md  architecture.md  development.md  overview.md  user-guide.md
docs/superpowers/plans/: 2026-03-18-ai-chat-integration.md
docs/superpowers/specs/: 2026-03-18-ai-chat-integration-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file_commands.rs  filter_commands.rs  mod.rs  search_commands.rs
src-tauri/src/parser/: log_parser.rs  mod.rs  patterns.rs  types.rs
src-tauri/src/search/: mod.rs  regex_engine.rs
src-tauri/src/streaming/: file_indexer.rs  line_reader.rs  mod.rs
src/components/: ResizablePanel.tsx
src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  ContextIndicator.tsx
src/components/filter/: FilterPanel.tsx
src/components/search/: SearchBar.tsx
src/components/settings/: SettingsModal.tsx
src/components/viewer/: LogViewer.tsx
src/hooks/: useHighlight.ts  useLogStream.ts
src/services/: aiApi.ts  tauriApi.ts  toolExecutors.ts
src/stores/: chatStore.ts  filterStore.ts  logStore.ts  settingsStore.ts
src/types/: ai.ts  log.ts
